--- a/codegen.yml
+++ b/codegen.yml
@@ -1,10 +1,10 @@
 overwrite: true
-schema: "schema.graphql"
-documents: null
+schema: ./src/graphql/schema.graphql
+documents: ./src/graphql/**/*.graphql
 generates:
-  types.ts:
+  ./src/graphql/types.ts:
     config:
-      contextType: ./pages/api/index#GraphQLContext
+      contextType: ./context#GraphQLContext
       mapperTypeSuffix: Model
       mappers:
         Cart: "@prisma/client#Cart"
@@ -12,4 +12,5 @@ generates:
     plugins:
       - "typescript"
       - "typescript-operations"
+      - "typescript-react-apollo"
       - "typescript-resolvers"
