--- a/package.json
+++ b/package.json
@@ -13,23 +13,31 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@graphql-yoga/node": "^2.11.1",
+    "@apollo/client": "^3.6.9",
     "@prisma/client": "^4.0.0",
+    "apollo-server-micro": "^3.9.0",
+    "cookies-next": "^2.1.1",
     "graphql": "^16.5.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.4",
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-operations": "^2.4.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.16",
     "@graphql-codegen/typescript-resolvers": "2.6.6",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
+    "eslint": "^8.19.0",
     "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
     "prisma": "^4.0.0",
