--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^9.11.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
