--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "12.2.0",
+    "raw-body": "^2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^9.11.0",
